--- a/charts/app-tiny-clover/Chart.yaml
+++ b/charts/app-tiny-clover/Chart.yaml
@@ -9,25 +9,25 @@ dependencies:
   - name: app-tiny-clover
     alias: ba-analyzer
     version: "0.1.0"
-    repository: "file://../../backend-template"
+    repository: "file://../../templates/backend-go"
     condition: ba-analyzer.enabled
   - name: app-tiny-clover
     alias: file-manager
     version: "0.1.0"
-    repository: "file://../../backend-template"
+    repository: "file://../../templates/backend-go"
     condition: file-manager.enabled
   - name: app-tiny-clover
     alias: llm-client
     version: "0.1.0"
-    repository: "file://../../backend-template"
+    repository: "file://../../templates/backend-go"
     condition: llm-client.enabled
   - name: app-tiny-clover
     alias: data-aggregator
     version: "0.1.0"
-    repository: "file://../../backend-template"
+    repository: "file://../../templates/backend-go"
     condition: data-aggregator.enabled
   - name: app-tiny-clover
     alias: life-organizer
     version: "0.1.0"
-    repository: "file://../../backend-template"
+    repository: "file://../../templates/backend-go"
     condition: life-organizer.enabled
