--- a/charts/app-tiny-clover/Chart.yaml
+++ b/charts/app-tiny-clover/Chart.yaml
@@ -6,27 +6,27 @@ version: 0.1.0
 appVersion: "0.1.0"
 
 dependencies:
-  - name: app-tiny-clover
+  - name: backend-go
     alias: ba-analyzer
     version: "0.1.0"
     repository: "file://../../templates/backend-go"
     condition: ba-analyzer.enabled
-  - name: app-tiny-clover
+  - name: backend-go
     alias: file-manager
     version: "0.1.0"
     repository: "file://../../templates/backend-go"
     condition: file-manager.enabled
-  - name: app-tiny-clover
+  - name: backend-go
     alias: llm-client
     version: "0.1.0"
     repository: "file://../../templates/backend-go"
     condition: llm-client.enabled
-  - name: app-tiny-clover
+  - name: backend-go
     alias: data-aggregator
     version: "0.1.0"
     repository: "file://../../templates/backend-go"
     condition: data-aggregator.enabled
-  - name: app-tiny-clover
+  - name: backend-go
     alias: life-organizer
     version: "0.1.0"
     repository: "file://../../templates/backend-go"
