--- a/argocd/applications/app-jobs.yaml
+++ b/argocd/applications/app-jobs.yaml
@@ -16,5 +16,8 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    managedNamespaceMetadata:
+      labels:
+        custom-image: "true"
     syncOptions:
       - CreateNamespace=true
