--- a/argocd/applicationsets/oss-litellm.yaml
+++ b/argocd/applicationsets/oss-litellm.yaml
@@ -42,3 +42,4 @@ spec:
           selfHeal: true
         syncOptions:
           - CreateNamespace=true
+SFUtTGVlOmdocF9scU0wdjRlWDd5SmExdldONHNVUzBkNUMxZUNmTGUxYmpuazY=
