--- a/charts/app-jobs/ba-party-analyze-job.yaml
+++ b/charts/app-jobs/ba-party-analyze-job.yaml
@@ -14,6 +14,8 @@ spec:
         - name: ba-party-analyzer
           image: ghcr.io/beaverhouse/tinyclover-ba-party-analyzer:0.1.0
           imagePullPolicy: IfNotPresent
+          imagePullSecrets:
+            - name: ghcr-secret
           envFrom:
             - secretRef:
                 name: ba-party-analyze-secret
