--- a/charts/app-jobs/ba-party-analyze-secret.yaml
+++ b/charts/app-jobs/ba-party-analyze-secret.yaml
@@ -23,3 +23,6 @@ spec:
     - secretKey: "GEMINI_API_KEY"
       remoteRef:
         key: "GEMINI_FREE_API_KEY"
+    - secretKey: "YOUTUBE_API_KEY"
+      remoteRef:
+        key: "YOUTUBE_API_KEY"
