--- a/charts/app-jobs/ba-party-discovery-cronjob.yaml
+++ b/charts/app-jobs/ba-party-discovery-cronjob.yaml
@@ -1,20 +1,20 @@
 apiVersion: batch/v1
-kind: Job
+kind: CronJob
 metadata:
-  name: ba-party-analyze-job
+  name: ba-party-discovery-cronjob
 spec:
-  completions: 1
+  schedule: "*/5 * * * *"
   template:
     metadata:
       labels:
-        app: ba-party-analyze
+        app: ba-party-discovery
     spec:
       restartPolicy: Never
       imagePullSecrets:
         - name: ghcr-secret
       containers:
-        - name: ba-party-analyzer
-          image: ghcr.io/beaverhouse/tinyclover-ba-party-analyzer:0.1.3
+        - name: ba-party-discovery
+          image: ghcr.io/beaverhouse/tinyclover-ba-party-discovery:0.1.3
           imagePullPolicy: IfNotPresent
           envFrom:
             - secretRef:
@@ -22,3 +22,5 @@ spec:
           env:
             - name: GO_ENV
               value: "production"
+            - name: CONTENT_ID
+              value: "S82-0"
