--- a/charts/app-jobs/ba-party-discovery-cronjob.yaml
+++ b/charts/app-jobs/ba-party-discovery-cronjob.yaml
@@ -4,23 +4,25 @@ metadata:
   name: ba-party-discovery-cronjob
 spec:
   schedule: "*/5 * * * *"
-  template:
-    metadata:
-      labels:
-        app: ba-party-discovery
+  jobTemplate:
     spec:
-      restartPolicy: Never
-      imagePullSecrets:
-        - name: ghcr-secret
-      containers:
-        - name: ba-party-discovery
-          image: ghcr.io/beaverhouse/tinyclover-ba-party-discovery:0.1.3
-          imagePullPolicy: IfNotPresent
-          envFrom:
-            - secretRef:
-                name: ba-party-analyze-secret
-          env:
-            - name: GO_ENV
-              value: "production"
-            - name: CONTENT_ID
-              value: "S82-0"
+      template:
+        metadata:
+          labels:
+            app: ba-party-discovery
+        spec:
+          restartPolicy: Never
+          imagePullSecrets:
+            - name: ghcr-secret
+          containers:
+            - name: ba-party-discovery
+              image: ghcr.io/beaverhouse/tinyclover-ba-party-discovery:0.1.3
+              imagePullPolicy: IfNotPresent
+              envFrom:
+                - secretRef:
+                    name: ba-party-analyze-secret
+              env:
+                - name: GO_ENV
+                  value: "production"
+                - name: CONTENT_ID
+                  value: "S82-0"
